--- a/src/Temperature.css
+++ b/src/Temperature.css
@@ -41,3 +41,20 @@ li:first-letter {
 .today-low-temp .active:hover {
   text-decoration: none;
 }
+
+#search-form {
+  position: relative;
+  top: 30px;
+}
+.button {
+  border-color: #79c2d0;
+}
+#city-input {
+  border-radius: 30px;
+  border: 3px solid #79c2d0;
+}
+.current-button {
+  background-color: #66bfbf;
+  border-color: #79c2d0;
+  margin-left: 20px;
+}
